# gesture_recognition

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: ci.yml
include/: camera.h  camera_mock.h  consts.h  ethernet.h  mock_image.h  model.h  server.h  tflite_model.h  web_gui.h  wifi.h
main/: CMakeLists.txt  Kconfig  camera.cpp  camera_mock.cpp  ethernet.cpp  idf_component.yml  main.cpp  mock_image.c  server.cpp  tflite_model.cpp  web_gui.cpp  wifi.cpp
models/: model.cc
scripts/: cnn.py  convert_to_tflite.py  get_mock_image.py  train.py
src/: cnn.cpp  cnn.h  cnn.hpp  gesture_dataset.cpp  gesture_dataset.h  main.cpp
tools/: dockerfile
